<resources>
    <string name="app_name">Appark</string>
    <string name="title_activity_maps">Appark</string>
    <string name="tornar_cotxe">Tornar al Cotxe</string>
    <string name="veure_historial">Veure Historial</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_userName">User Name</string>
    <string name="nav_header_email">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_estadistiques">Estadistiques</string>
    <string name="menu_configuracio">Configuració</string>
    <string name="menu_historialUbis">Historial d\'ubicacions</string>
    <string name="menu_social">Social</string>
    <string name="menu_tancaSessio">Tanca sessió</string>
    <string name="menu_paginaPrincipal">Pàgina principal</string>
    <string name="btnCancel">Cancel·la</string>
    <string name="btnSave">Guarda</string>
    <string name="titleConfiguration">Configuració</string>
    <string name="titlePassword">Contrasenya</string>
    <string name="nameOldPassword">Antiga contrasenya</string>
    <string name="nameNewPassword">Nova contrasenya</string>
    <string name="titleEmail">Correu</string>
    <string name="nameOldEmail">Antic correu</string>
    <string name="nameNewEmail">Nou correu</string>

    <string name="login">Entra</string>
    <string name="password">Contrasenya</string>
    <string name="e_mail">Correu electrònic</string>
    <string name="create_account">Crea un compte</string>
    <string name="example_mail">example@gmail.com</string>
    <string name="Entrar">Entrar</string>
    <string name="register">Continuar</string>
    <string name="re_type_password">Confirma la contrasenya</string>
    <string name="your_name">Nom complet</string>
    <string name="Termes">Estic d\'acord amb els Termes de Servei i la Politica de Privacitat.</string>
    <string name="crea_compte">o si no tens cap compte</string>
    <string name="registrat">Registrar-se</string>
    <string name="ja_tens_compte">o si ja tens un compte</string>
    <string name="tornar_login">Tornar</string>

    <string name="add_description_msg">Note description</string>
    <string name="save_note">Save note</string>
    <string name="tancar_sessio">Tancant sessió…</string>
    <string name="iniciar_ruta">Iniciar ruta</string>
    <string name="reservar_ubi">Reservar ubicació</string>

    <string name="iniciar_ruta">Iniciar ruta</string>
    <string name="guardar_ubi">Guardar ubicació</string>

</resources>