<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_configuracio">

    <fragment
        android:id="@+id/nav_configuracio"
        android:name="com.example.appark.Activities.ConfiguracioFragment"
        android:label="@string/menu_configuracio"
        tools:layout="@layout/fragment_configuracio" />

    <fragment
        android:id="@+id/nav_historialubis"
        android:name="com.example.appark.Activities.HistorialUbisFragment"
        android:label="@string/menu_historialUbis"
        />

    <fragment
        android:id="@+id/nav_social"
        android:name="com.example.appark.Activities.SocialFragment"
        android:label="@string/menu_social"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/nav_paginaprincipal"
        android:name="com.example.appark.Activities.PaginaPrincipalFragment"
        android:label="@string/menu_paginaPrincipal"
        tools:layout="@layout/fragment_paginaprincipal" />

</navigation>