<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="46dp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/asap"
        android:text="@string/create_account"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_custom_et"
        android:fontFamily="@font/asap"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_email_r"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/asap"
        android:inputType="textEmailAddress"
        android:background="@drawable/login_custom_et"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password_r"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_custom_et"
        android:fontFamily="@font/asap"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password2_r"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_custom_et"
        android:fontFamily="@font/asap"
        android:hint="@string/re_type_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="372dp"
            android:layout_height="45dp"
            android:layout_above="@+id/btn_register"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="88dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/Termes"
            android:textColor="#878585"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/login_custom_btn"
            android:fontFamily="@font/asap"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="166dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btn_register"
            android:layout_alignParentStart="true"
            android:layout_marginStart="76dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@+id/btn_tornarLogin"
            android:fontFamily="@font/quicksand"
            android:text="@string/ja_tens_compte"
            android:textAlignment="viewEnd"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_tornarLogin"
            android:layout_width="134dp"
            android:layout_height="71dp"
            android:layout_below="@+id/btn_register"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="59dp"
            android:background="@drawable/login_custom_et"
            android:fontFamily="@font/asap"
            android:text="@string/tornar_login"
            android:textColor="@color/black" />

        <ProgressBar
            android:id="@+id/circular_progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="221dp"
            android:indeterminateDrawable="@drawable/circular_progressbar"
            android:indeterminateDuration="@android:integer/config_longAnimTime" />

    </RelativeLayout>

</LinearLayout>